--- a/scss/layouts/_search_result.scss
+++ b/scss/layouts/_search_result.scss
@@ -1,7 +1,16 @@
 .filter-col{
   @extend .col-lg-3;
   max-width: 300px;
-
+  > .btn{
+    @include font-size(20px);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    i{
+      @include font-size(23px);
+      height: 23px;
+    }
+  }
 }
 .results-container {
   @extend .p-inner-sec;
@@ -10,8 +19,8 @@
 .filter{
   @extend .list-unstyled;
   @include border-radius-div;
-  overflow: hidden;
   background: $white;
+
   > li{
     border-bottom: 2px solid $light-gray;
     padding: 0 15px 5px;
@@ -87,6 +96,7 @@
     }
   }
 }
+
 .filter-search{
   position: relative;
   margin-bottom: 15px;
@@ -95,7 +105,7 @@
     @include border-radius-div;
     border-width: 0;
     height: 35px;
-    padding-#{$left}: 35px;
+    padding-#{$left}: 35px !important;
     @include font-size(14px);
     &:focus{
       box-shadow: none;
@@ -341,16 +351,47 @@
 .more-result{
   margin-top: 40px;
   text-align: center;
-  a{
-    width: 100%;
-    line-height: 20px;
-    display: flex;
+
+  @include border-radius-div();
+  display: inline-flex;
+  li{
+
+    display: inline-flex;
     align-items: center;
     justify-content: center;
-    height: 50px;
-    i{
-      height: 21px;
+    margin-#{$right}: 0 !important;
+    @include font-size(15px);
+    span{
+      @include opacity(0.5);
+      line-height: 17px;
+      padding: 10px 5px;
     }
+    a{
+      padding: 10px 10px;
+      @include font-size(20px);
+
+      @include opacity(0.3);
+      &:hover{
+        @include opacity(1);
+
+      }
+      i{
+        height: 20px;
+        display: block;
+      }
+    }
+    &.next{
+      a{
+      @include opacity(1);
+      }
+    }
+    &.disabled{
+      a{
+        cursor: default;
+        @include opacity(0.1);
+      }
+    }
+
   }
 }
 .filter-result{
@@ -371,11 +412,19 @@
     text-transform: capitalize;
     @include font-size(14px);
     position: relative;
-    &:first-child{
-      border-radius: $border-radius-base 0 0 $border-radius-base;
+    border-bottom-#{$right}-radius: $border-radius-base;
+    & + li{
+      border-bottom-#{$right}-radius: 0;
     }
     &:last-child{
-      border-radius: 0 0 $border-radius-base 0;
+      border-bottom-#{$right}-radius: $border-radius-base;
+    }
+    &:first-child{
+      border-bottom-#{$left}-radius: $border-radius-base;
+      border-top-#{$left}-radius: $border-radius-base;
+    }
+    &:first-child:not(:last-child){
+      border-bottom-#{$right}-radius: 0;
     }
     a{
       position: absolute;
@@ -539,9 +588,11 @@
     border-radius: 0;
     background: $white;
     > li{
+
       border-bottom-width: 0;
       padding-bottom: 0;
       margin-bottom: 0;
+
       > .row{
         padding-top: 20px;
         padding-bottom: 20px;
@@ -590,6 +641,9 @@
         > .row{
           border-bottom-width: 2px;
         }
+      }
+      &.have-child{
+        cursor: pointer;
       }
     }
     .products-panel{
@@ -690,4 +744,14 @@
     -o-transform: translateX(100%);
     transform: translateX(100%);
   }
+}
+
+
+.apply-filter{
+  position: relative;
+  position: -webkit-sticky;
+  position: sticky;
+}
+.apply-filter{
+  bottom: 0;
 }
