--- a/scss/layouts/authentication/_forgot-password.scss
+++ b/scss/layouts/authentication/_forgot-password.scss
@@ -1,204 +1,73 @@
-#forgot-password {
-  .content {
-    padding-bottom: 196px;
-    text-align: center;
-    background-color: #f6f6f6;
-
-    .upload-img {
-      margin-top: 74px;
-      margin-bottom: 20px;
-      width: 145px !important;
+.forgot-password {
+  text-align: center;
+  @extend .gray-bg;
+  @extend .pt-sec;
+    aside {
       height: 126px;
+      width: 145px;
+      margin: 0 auto;
     }
     .sec-header{
       text-align: unset !important;
+      display: block;
+      margin-top: 20px;
+      margin-bottom: 10px;
+      text-align: center;
       h1 {
         @include text-capitalize;
-        p {
+        font-weight: 300;
+        @include font-size(40px);
+        margin-bottom: 0;
+        p{
           float: none;
         }
       }
+      span{
+        display: none;
+      }
     }
-    .form-group {
+    .container-fluid > p{
+      @include font-size(15px);
+      margin: auto;
+      margin-bottom: 10px;
+      line-height: 25px;
+      @include opacity(0.7);
+      span{
+        display: block;
+      }
+    }
+    form {
       @include text-left;
-      align-items: center;
-      justify-content: center;
-      display: flex;
-      margin-#{$right}: 0px !important;
-      margin-bottom: 150px !important;
-      @include padding-left(30%);
-      @include padding-right(30%);
-      div {
-        @include margin-right(0px);
-        padding: 0px;
+      max-width: 650px;
+      margin: 0 auto 20px;
+      label{
+        @include font-size(16px);
+        padding-#{$left}: 15px;
+        @include opacity(0.8);
       }
       .RenderField {
-        text-align: $left;
-        @include margin-right(0px);
+        text-align: #{$left};
         .form-control {
-          text-align: $left;
-          background: $white;
-          border: none;
-          width: 0px;
           height: 55px;
+          background: $white;
+          text-align: #{$left};
           border-radius: corner-values(20px 0px 20px 20px) !important;
           @include box-shadow;
-          input {
-            justify-content: center;
-            height: 55px;
-            background: $white;
-            text-transform: none;
-            color: black;
-          }
-          label {
-            @include font-size(16px);
-            width: 37px;
-            height: 13px;
-            opacity: 0.8;
-            font-family: Roboto;
-            font-weight: normal;
-            font-style: normal;
-            font-stretch: normal;
-            line-height: 1.56;
-            letter-spacing: normal;
-            text-align: $left;
-            color: $charcoal-grey-two-80;
-            padding-#{$left}: 13px;
-          }
         }
       }
       .btn-primary {
-        @include margin-right(0px);
-      }
-    }
-    h5 {
-      font-family: Roboto;
-      @include font-size(18px);
-      font-weight: normal;
-      font-style: normal;
-      font-stretch: normal;
-      line-height: 1.67;
-      letter-spacing: normal;
-      text-align: center;
-      margin-bottom: 50px;
-      color: $dark-charcoal-grey;
-    }
-    .btn-primary {
-      border-style: none;
-      height: 55px;
-      width: 115px;
-      height: 55px;
-      font-size: 20px;
-      @include margin-left(5px);
-      background: $brand-color;
-      color: white;
-      border-radius: corner-values(0px 20px 20px 20px) !important;
-      margin-top: 22px;
-      @include box-shadow;
-      i {
-        @include margin-left(10px);
-      }
-    }
-    div {
-      text-align: $right;
-      margin: side-values(0px 127px 0px 0px) !important;
-      img {
-        background: none;
-        margin: 0px;
-        width: 50px;
-        height: 45px;
-      }
-      a {
-        margin: 0px;
-        font-family: Roboto;
-        @include font-size(12px);
-        font-weight: normal;
-        font-style: normal;
-        font-stretch: normal;
-        line-height: 1.17;
-        letter-spacing: normal;
-        display: inline-block;
-        text-align: center;
-      }
-    }
-  }
-}
-#forgot-password-mobile {
-  .content {
-    text-align: center;
-    background-color: #f6f6f6;
-    padding-top: 40px;
-    padding-bottom: 150px;
-    img {
-      width: 145px;
-      height: 126px;
-      margin-bottom: 28px;
-    }
-    .sec-header{
-      text-align: unset !important;
-      h1 {
-        @include text-capitalize;
-        p {
-          float: none;
+        margin-top: 30px;
+        display: flex;
+        align-items: center;
+        @include font-size(20px);
+        height: 55px;
+        @include media-breakpoint-down(md){
+          width: 100%;
+        };
+        i{
+          @include font-size(23px);
+          height: 23px;
         }
       }
     }
-    h5 {
-      margin-#{$left}: 33px;
-      margin-#{$right}: 32px;
-      font-family: Roboto;
-      @include font-size(18px);
-      font-weight: normal;
-      font-style: normal;
-      font-stretch: normal;
-      line-height: 1.67;
-      letter-spacing: normal;
-      color: $dark-charcoal-grey;
-      margin-bottom: 30px;
-    }
-    .form-group {
-      .RenderField {
-        text-align: $left;
-        @include padding-left(20px);
-        @include padding-right(20px);
-        input {
-          @include box-shadow;
-          height: 55px;
-          background: $white;
-          text-transform: none;
-          color: black;
-          border-radius: corner-values(20px 0px 20px 20px) !important;
-        }
-        label {
-          @include font-size(16px);
-          opacity: 0.8;
-          font-family: Roboto;
-          font-weight: normal;
-          font-style: normal;
-          font-stretch: normal;
-          line-height: 1.56;
-          letter-spacing: normal;
-          margin-#{$left}: 20px;
-          color: $charcoal-grey-two-80;
-        }
-      }
-    }
-    .btn-primary {
-      text-align: $right;
-      border-style: none;
-      height: 55px;
-      width: 94%;
-      text-transform: none;
-      @include font-size(20px);
-      background: $brand-color;
-      color: white;
-      border-radius: corner-values(0px 20px 20px 20px) !important;
-      margin-top: 22px;
-      @include box-shadow;
-      i {
-        margin-#{$left}: 10px;
-        margin-#{$right}: 17px;
-      }
-    }
-  }
 }
