--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -16,7 +16,7 @@ h1{
 }
 .form-control{
   &:focus{
-    box-shadow: 0 0 0 0.2rem rgba(237, 64, 54, 0.25);
+    box-shadow: 0px 1px 1px 0px rgba(0, 0, 0, 0.2);
   }
 }
 .input{
@@ -25,7 +25,7 @@ h1{
   min-height: 50px;
   &:focus{
     background: $light-gray;
-    box-shadow: 0 0 0 0.2rem rgba(237, 64, 54, 0.25);
+    box-shadow: 0px 1px 1px 0px rgba(0, 0, 0, 0.2);
   }
 }
 input::placeholder {
@@ -67,15 +67,29 @@ img{
 }
 
 input:-webkit-autofill,
-input:-webkit-autofill:hover,
-input:-webkit-autofill:focus,
-input:-webkit-autofill:active  {
+input:-internal-autofill-previewed,
+input:-internal-autofill-selected{
     -webkit-box-shadow: 0 0 0 30px $light-gray inset !important;
+    background-color: transparent !important;
+
+}
+.has-float-label{
+  input:-webkit-autofill,
+  input:-internal-autofill-previewed,
+  input:-internal-autofill-selected{
+    z-index: 0 !important;
+  }
+
+  input:-webkit-autofill:focus{
+    -webkit-box-shadow: inset  0 0 0 30px $light-gray , 0px 1px 1px 0px rgba(0, 0, 0, 0.2) !important;
+  }
 }
 input:disabled,
 button:disabled{
   cursor: not-allowed;
 }
 .list-unstyled {
-  @include padding-left(0);
+  @include if-rtl{
+    @include padding-left(0);
+  };
 }
