--- a/scss/layouts/_header.scss
+++ b/scss/layouts/_header.scss
@@ -96,7 +96,7 @@
     margin-top: 20px;
   };
   > ul{
-    @extend .d-flex;
+    display: flex;
     @extend .list-unstyled;
     margin-bottom: 0;
     padding-bottom: 0;
@@ -108,6 +108,19 @@
       &.search-sm{
         margin-#{$right}: 2px;
         margin-top: -2px;
+      }
+      .not-empty{
+        position: relative;
+        display: block;
+        span{
+          position: absolute;
+          border-radius: 100%;
+          background: $brand-color;
+          color: $white;
+          top: -8px;
+          #{$right}: -6px;
+          padding: 0 5px;
+        }
       }
     }
   }
@@ -143,6 +156,7 @@
       @extend .px-3;
       @include font-size(15px);
       color: $charcoal-grey-two-40;
+      white-space: nowrap;
       a{
         color: $basic-gray;
         font-weight: 400;
@@ -169,7 +183,7 @@
       @extend .mx-3;
       padding-left: 0;
       padding-right: 0;
-      @extend .d-flex;
+      display: inline-flex;
       @extend .flex-nowrap;
       margin-bottom: 17px;
       li{
