--- a/scss/layouts/_quotation-request.scss
+++ b/scss/layouts/_quotation-request.scss
@@ -1,390 +1,541 @@
-#custom-header {
-  color: $white;
-  text-align: center;
-  @include large-medium-screens {
-    background: url(/img/tyres-lg.jpg);
-    min-height: 249px;
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center top;
-  }
-  @include small-screen {
-    background: url(/img/tyres-xxs.jpg);
-    height: 192px;
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center top;
-  }
-  .custom-header-content {
-    position: relative;
-    @include large-medium-screens {
-      top: 87px;
-      bottom: 261px;
+.qutaion-h{
+  .hero-content{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    top: 0;
+    height: 100%;
+    p{
+      margin-top: 20px;
+      @include font-size(15px);
+      color: $white;
+      margin-bottom: 0;
+      text-align: center;
+      padding-left: 15px;
+      padding-right: 15px;
     }
-    .custom-header-title {
-      height: 34px;
-      p {
-        margin-bottom: 0;
-      }
-      h1 {
-        @include large-medium-screens {
-          @include font-size($title-font-size);
-        }
-      }
+  }
+  @include media-breakpoint-down(lg){
+    h1{
+      @include font-size(40px);
     }
-
-    @include small-screen {
-      top: -160px;
-      bottom: -160px;
+    p{
+      @include font-size(13px);
+      margin-top: 0 !important;
     }
   }
 }
-
-#custom-title {
-  @include text-left;
-  .title-left {
-    @include boarder-right-radius(0, 20px);
-    background-color: $light-gray;
-    height: 125px;
-    h1 {
+.steps-title{
+  @extend .position-relative;
+  margin-bottom: 40px;
+  @include media-breakpoint-down(md){
+    margin-bottom: 0;
+  };
+  .total-bg{
+    position: absolute;
+    height: 100%;
+    top: 0;
+    #{$right}: calc(50% + 15px);
+    width: 100%;
+    height: 100%;
+    border-bottom-#{$right}-radius: 20px;
+    @include media-breakpoint-down(md){
+      display: none;
+    };
+  }
+  .steps-num{
+    text-align: #{$right};
+    p{
       @include font-size(100px);
       font-weight: 300;
       color: $brand-color;
-      text-align: $right;
+      line-height: 125px;
+      padding-#{$right}: 20px;
+      display: block;
+      margin-bottom: 0;
     }
+    span{
+      position: absolute;
+      top: 0;
+      #{$right}: -10px;
+      height: 100%;
+      display: flex;
+      align-items: center;
+      i{
+        @include font-size(21px);
+        @include opacity(0.2);
+        height: 21px;
+        + i{
+          @include font-size(35px);
+          height: 35px;
+          margin-#{$left}: -17px;
+          margin-top: -4px;
+        }
+      }
+    }
+    @include media-breakpoint-down(md){
+      border-bottom-#{$right}-radius: 20px;
+      background: $light-gray;
+      p{
+        padding-#{$right}: 0;
+      }
+      span{
+        #{$right}: -22px;
+      }
+    };
   }
-  .title-right {
-    h1 {
-      @include large-medium-screens {
+  .steps-cap{
+    display: flex;
+    align-items: center;
+    p{
+      margin-bottom: 0;
+      color: $basic-gray;
+      font-weight: 300;
+      @include font-size(25px);
+      text-transform: capitalize;
+      span{
+        text-transform: uppercase;
         @include font-size(40px);
-        padding-top: 32px;
+        @include opacity(0.5);
+        display: block;
+        line-height: 30px;
+        margin-bottom: 5px;
       }
-      @include small-screen {
-        @include font-size(35px);
-        padding-top: 26px;
-      }
-      color: $basic-gray;
-      font-weight: 300;
-      opacity: 0.5;
-      margin-bottom: 0;
-    }
-    p {
-      @include large-medium-screens {
-        @include font-size(25px);
-      }
-      @include small-screen {
-        @include font-size(20px);
-      }
-
-      color: $basic-gray;
-      font-weight: 300;
-      padding-bottom: 0;
-      margin-bottom: 0;
+      @include media-breakpoint-down(md){
+        @include font-size(17px);
+      };
     }
   }
 }
-
-#custom-steps {
-  h3 {
-    @include font-size(20px);
-  }
-  .steps-container {
-    padding-top: 37px;
-
-    .request,
-    .check-price,
-    .add-to-cart,
-    .delivery-product {
-      @include small-screen {
-        width: 100%;
+.step-active{
+@include media-breakpoint-down(md){
+  display: none;
+}
+  .order-steps{
+    li{
+      @include make-col(3);
+      &:not(:first-child){
+        h3{
+          @include opacity(0.4);
+        }
       }
-    }
-  }
-  p {
-    color: $basic-gray;
-    opacity: 0.5;
-  }
+      &:first-child{
+        position: relative;
+        &::after{
+          content: "\4e";
+          width: 38px;
+          height: 38px;
+          background: $white;
+          @include box-shadow;
+          position: absolute;
+          bottom: -42px;
+          left: 50%;
+          margin-left: -19px;
+          border-radius: 100%;
+          @include font-size(27px);
+          color: $brand-color;
+          padding-top: 8px;
+        }
+      }
 
-  .disabled {
-    h3 {
-      color: $basic-gray;
-      opacity: 0.5;
     }
+  }
+  h3{
+    font-weight: 400;
+  }
+  p,
+  figure + i,
+  figcaption + i{
+    display: none !important;
   }
 }
-
-#custom-details {
-  @include text-left;
-  padding-bottom: 87px;
-  .title-container {
-    padding-top: 66px;
+.custom-order-form{
+  @extend .pt-sec;
+  .title-container{
+    position: relative;
   }
-
-  .links {
-    a {
-      color: $brand-color;
+  .sec-header{
+    margin-bottom: 15px;
+    h1{
+      @include font-size(30px);
+      p{
+        padding-#{$left}: 40px;
+      }
+      @include media-breakpoint-down(md){
+        display: flex;
+        p{
+          margin-bottom: 7px;
+        }
+      };
     }
-  }
-
-  .btn-gray {
-    @include font-size(20px);
-    i {
-      &::before {
-        top: 4px;
+    span{
+      @include media-breakpoint-down(md){
+        margin: 0;
       }
     }
   }
-
-  h3 {
-    @include font-size(20px);
-    color: $basic-gray;
-    font-weight: normal;
-    font-style: normal;
-    text-transform: none;
+  .open-garage{
+    position: relative;
+    a{
+      @include font-size(19px);
+      border-bottom-#{$right}-radius: 0 !important;
+      margin-bottom: 5px;
+      display: flex;
+      align-items: center;
+      padding: 6px 20px;
+      i{
+        @include font-size(30px);
+        height: 30px;
+      }
+    }
+    p{
+      position: absolute;
+      top: -5px;
+      #{$right}: 15px;
+      border-radius: 100%;
+      @include font-size(15px);
+      color: $white;
+      background: $brand-color;
+      padding: 0 5px;
+      margin-bottom: 0;
+      border: 1px solid $white;
+      min-width: 22px;
+      text-align: center
+    }
   }
-  .garage-btn-container {
-    @include text-right;
-
-  }
-
-  .custom-container {
+  .sec-shadow{
     @include box-shadow;
-    @include boarder-left-radius;
-    @include margin-left(11px);
-    padding-bottom: 10px;
-    margin-bottom: 30px;
+    border-radius: corner-values(0 0 $border-radius-base $border-radius-base);
+    padding: 10px 15px 15px;
+    margin-bottom: 45px;
 
-    label {
-      display: none;
+    h3{
+      @include font-size(20px);
+      font-weight: 400;
+      margin-bottom: 15px;
+      text-transform: capitalize;
     }
-    br {
-      display: none;
+    &.part-array{
+      border-bottom-#{$right}-radius: 0;
+      margin-bottom: 60px;
+      padding-bottom: 0;
     }
-
-    .select-field-make-container {
-      margin-top: 9px;
-
-      @include small-screen {
-        padding-bottom: 10px;
-        padding-top: 10px;
-      }
-
-      .select-input {
-        width: 100%;
-        height: 55px;
-        background: $light-gray;
-        @include small-screen {
-          @include boarder-left-radius(20px, 0);
-        }
-
-        @include large-medium-screens {
-          @include boarder-left-radius;
-        }
-      }
+  }
+  .form-control{
+    height: 55px;
+  }
+  form{
+    .select__menu{
+      z-index: 2;
     }
-
-    .select-field-model-container {
-      @include large-medium-screens {
-        @include padding-right(0);
-        @include padding-left(6px);
-      }
-
-      @include small-screen {
-        padding-bottom: 10px;
-        padding-top: 10px;
-      }
-
-      .select-field-model {
-        height: 55px;
-        background: $light-gray;
-      }
-    }
-
-    .select-field-year-container {
-      @include large-medium-screens {
-        @include padding-right(0);
-        @include padding-left(6px);
-      }
-
-      @include small-screen {
-        padding-bottom: 10px;
-        padding-top: 10px;
-      }
-
-      .select-field-year {
-        height: 55px;
-        background: $light-gray;
-      }
-    }
-
-    .vin-field-container {
-      @include large-medium-screens {
-        @include padding-left(6px);
-      }
-
-      @include small-screen {
-        padding-bottom: 10px;
-        padding-top: 10px;
-      }
-
-      .vin-field {
-        @include large-medium-screens {
-          @include boarder-right-radius(0, 20px);
-        }
-        @include small-screen {
-          @include boarder-right-radius(0, 20px);
-          @include boarder-left-radius(0, 20px);
-        }
-
-        background: $light-gray;
-        height: 55px;
-      }
-    }
-
-    .select-region-field-container {
-      @include small-screen {
-        padding-bottom: 10px;
-        padding-top: 10px;
-      }
-
-      .select-input {
-        @include large-medium-screens {
-          @include boarder-left-radius;
-        }
-        @include small-screen {
-          @include boarder-left-radius(20px, 0);
-        }
-        background: $light-gray;
-        height: 55px;
-      }
-    }
-
-    .select-city-field-container {
-      @include large-medium-screens {
-        @include padding-left(6px);
-      }
-
-      @include small-screen {
-        padding-bottom: 10px;
-        padding-top: 10px;
-      }
-
-      .select-input {
-        @include large-medium-screens {
-          @include boarder-right-radius(0, 20px);
-        }
-        @include small-screen {
-          @include boarder-right-radius(0, 20px);
-          @include boarder-left-radius(0, 20px);
-        }
-        background: $light-gray;
-        height: 55px;
-      }
-    }
-
-    .parts-container {
-      padding-bottom: 11px;
-      label {
-        display: none;
-      }
-      br {
-        display: none;
-      }
-
-      .part-desc-field {
-        @include padding-left(10px);
-        width: 100%;
-        height: 55px;
-        background: $light-gray;
-        @include font-size(16px);
-
-        @include small-screen {
-          @include boarder-left-radius(20px, 0);
-        }
-
-        @include large-medium-screens {
-          @include boarder-left-radius;
+    .row{
+      [class*='col']:first-child{
+        .select__control,
+        .has-float-label,
+        .has-float-label input{
+          border-top-#{$left}-radius: $border-radius-base;
         }
       }
-
-      .number-picker-container {
-        @include large-medium-screens {
-          @include padding-left(0);
-        }
-        @include padding-right(5px);
-
-        @include small-screen {
-          padding-bottom: 10px;
-          padding-top: 10px;
-        }
-
-        #number-picker {
-          .btn-positive {
-            @include font-size(18px);
-            border-radius: corner-values(0) !important;
-            height: 55px;
+      @include media-breakpoint-up(lg){
+        [class*='col']:first-child{
+          .select__control,
+          .has-float-label,
+          .has-float-label input{
+            border-bottom-#{$left}-radius: $border-radius-base;
           }
-          .btn-negative {
-            @include font-size(18px);
-            border-radius: corner-values(0 0 $border-radius-base 0) !important;
-            height: 55px;
-          }
-          input {
-            @include font-size(18px);
-            background: $light-gray !important;
-            padding: 0;
-            height: 55px;
-            text-align: center;
-            cursor: inherit;
-            border-radius: corner-values(0 0 0 0) !important;
+        }
+        [class*='col']{
+          padding-#{$right}: 6px;
+        }
+        [class*='col'] + [class*='col']{
+          padding-#{$left}: 0;
+        }
+        [class*='col']:last-child{
+          padding-#{$right}: 15px;
+          .select__control,
+          .has-float-label,
+          .has-float-label input{
+            border-bottom-#{$right}-radius: $border-radius-base;
           }
         }
       }
-
-      .delete-btn-container {
-        button {
-          background: inherit;
+      @include media-breakpoint-down(md){
+        [class*='col']:last-child{
+          padding-#{$right}: 15px;
+          .select__control,
+          .has-float-label,
+          .has-float-label input{
+            border-bottom-#{$right}-radius: $border-radius-base;
+          }
         }
-        @include small-screen {
-          padding-top: 10px;
+        [class*='col']{
+          margin-top: 10px;
         }
-        @include padding-left(0);
-        i {
-          @include opacity(0.6);
-          &::before {
-            @include font-size(22px);
+        [class*='col']:nth-child(1),
+        [class*='col']:nth-child(2){
+          margin-top: 0;
+        }
+        [class*='col']:nth-child(even){
+          padding-#{$left}: 0;
+        }
+        [class*='col']:nth-child(odd){
+          padding-#{$right}: 10px;
+        }
+        &.vehicle-info{
+          [class*='col']:nth-child(3){
+            .select__control,
+            .has-float-label,
+            .has-float-label input{
+              border-bottom-#{$left}-radius: $border-radius-base;
+            }
+          }
+        }
+        &.ship-info{
+          [class*='col']:first-child{
+            .select__control,
+            .has-float-label,
+            .has-float-label input{
+              border-bottom-#{$left}-radius: $border-radius-base;
+            }
+          }
+          @include media-breakpoint-down(md){
+            [class*='col']{
+              margin-top: 0;
+            }
+            [class*='col']:not(:first-child){
+              padding-#{$left}: 0;
+              padding-#{$right}: 10px;
+            }
+          }
+        }
+        &.submit-qout{
+          [class*='col']{
+            padding-right: 15px;
+            padding-left: 15px;
+          }
+        }
+      }
+      @include media-breakpoint-down(sm){
+        [class*='col']{
+          padding-right: 15px !important;
+          padding-left: 15px !important;
+        }
+        [class*='col'] + [class*='col']{
+          margin-top: 10px;
+        }
+        [class*='col']:last-child{
+          .select__control,
+          .has-float-label,
+          .has-float-label input{
+            border-bottom-#{$right}-radius: $border-radius-base;
+            border-bottom-#{$left}-radius: $border-radius-base;
+          }
+        }
+        &.vehicle-info{
+          [class*='col']:nth-child(3){
+            .select__control,
+            .has-float-label,
+            .has-float-label input{
+              border-bottom-#{$left}-radius: 0;
+            }
           }
         }
       }
     }
-    .add-part-btn-container {
-      text-align: $right;
+    .input-file{
+      top: 7px;
+    }
+  }
+}
+.step-num{
+  position: absolute;
+  top: 0;
+  #{$left}: 0;
+  @include font-size(40px);
+  font-weight: 300;
+  color: $brand-color;
+  line-height: 28px;
+  > span{
+    display: inline-flex;
+    align-items: center;
+    position: relative;
+    top: -3px;
+    #{$left}: -6px;
+  }
+  i{
+    color: $basic-gray;
+    @include font-size(14px);
+    @include opacity(0.3);
+    height: 13px;
+    + i{
+      @include opacity(0.4);
+      @include font-size(23px);
+      height: 22px;
+      margin-#{$left}: -13px;
       position: relative;
-      .btn {
-        @include box-shadow;
+      top: 5px;
+    }
+  }
+}
+.vehicle-not-empty{
+  h3{
+    margin-bottom: 0 !important;
+    display: flex;
+    align-items: center;
+  }
+  .float-label{
+    min-width: 160px;
+  }
+
+}
+.part-array{
+  .quantity{
+    border-top-#{$left}-radius: 0 !important;
+    border-bottom-#{$left}-radius: 0 !important;
+    button{
+      height: auto;
+      width: 55px;
+    }
+  }
+  .row + .row{
+    padding-top: 15px;
+    .quantity{
+      button{
+        width: 50px;
+      }
+    }
+  }
+  .row:last-child{
+    margin-top: 0;
+  }
+  .delete-part{
+    background: transparent;
+    width: 65px;
+    @include opacity(0.3);
+    display: flex;
+    align-items: center;
+    i{
+      @include font-size(26px);
+      height: 27px;
+    }
+    &:disabled{
+      display: none;
+    }
+    &:hover{
+      @include opacity(1);
+    }
+  }
+  .add-part{
+    position: relative;
+    button{
+      border-top-#{$right}-radius: 0 !important;
+      position: absolute;
+      height: 45px;
+      bottom: -47px;
+      #{$right}: 0;
+      background: $white;
+      @include font-size(15px);
+      color: $brand-color;
+      @include box-shadow-size(0px, 4px, 18px, 0px, rgba(0, 0, 0, 0.07));
+      span{
+        margin-left: 7px;
+        position: relative;
+        top: -2px;
+      }
+      i{
+        @include font-size(17px);
+        height: 17px;
+      }
+    }
+  }
+  > div > .row{
+    @include media-breakpoint-down(md){
+      padding-top: 20px;
+      padding-bottom: 20px;
+      border-top: 2px solid $light-gray;
+      [class*='col']:first-child{
+        .has-float-label,
+        .has-float-label input{
+          border-top-#{$left}-radius: $border-radius-base;
+          border-bottom-#{$left}-radius: $border-radius-base;
+        }
+      }
+      &:last-child{
+        padding: 0;
+        border-top-width: 0;
+      }
+
+    };
+    @include media-breakpoint-down(sm){
+      [class*='col']:last-child{
+        margin-top: 10px !important;
+        padding-#{$left}: 15px !important;
+        padding-#{$right}: 15px !important;
+        .has-float-label,
+        .has-float-label input{
+          border-bottom-#{$left}-radius: 0;
+        }
+      }
+      .part-actions{
+        max-width: none;
+          .quantity{
+            border-bottom-left-radius: $border-radius-base !important;
+            .btn{
+              z-index: 1;
+            }
+          }
+      }
+    };
+  }
+}
+.part-actions{
+  max-width: 230px;
+  display: flex;
+  .quantity{
+    max-width: none;
+  }
+}
+.submit-qout{
+  margin-bottom: 90px;
+  .col-lg{
+    display: flex;
+    > p{
+      @include font-size(17px);
+      margin-bottom: 0;
+      display: flex;
+      align-items: center;
+      @include opacity(0.8);
+      a{
         color: $brand-color;
-        @include font-size(15px);
-        position: absolute;
-        width: inherit;
-        #{$right}: -16px;
-        top: 11px;
-        background: $white;
-        border-top-#{$right}-radius: 0 !important;
-      }
-      i {
-        @include padding-right(6px);
+        padding-left: 5px;
+        padding-right: 5px;
       }
     }
   }
-
-  .btn-continue {
-    @include text-right;
-  }
-
-  .btn-footer {
-    @include small-screen {
-      @include text-right;
-      width: 100%;
+  .btn-primary{
+    @include font-size(20px);
+    display: flex;
+    align-items: center;
+    @include box-shadow();
+    i{
+      @include font-size(23px);
+      height: 25px;
     }
+  }
+  @include media-breakpoint-down(lg){
+    .col-lg > p{
+      margin-bottom: 20px;
+      display: block;
+    }
+    .btn-primary{
+      justify-content: flex-end;
+    }
+  };
+}
+
+//remove validation
+.select-input{
+  .input-group-append{
+    display: none;
   }
 }
