--- a/scss/layouts/setting/_setting.scss
+++ b/scss/layouts/setting/_setting.scss
@@ -1,309 +1,163 @@
-#setting {
+.profile-header{
+  display: flex;
+  figure{
+    width: 65px;
+    height: 65px;
+    background: $white;
+    display: inline-flex;
+    border-radius: 100%;
+    justify-content: center;
+    align-items: center;
+    overflow: hidden;
+    margin-bottom: 0;
+    margin-#{$right}: 15px;
+    img{
+      width: 100%;
+      height: 100%;
+      &.default{
+        width: 30px;
+        height: 30px;
+      }
+    }
+  }
+  h1{
+    align-items: center;
+    font-weight: 300 !important;
+    font-size: 30px !important;
+    text-transform: capitalize !important;
+    display: flex !important;
+  }
+}
+.sign-out{
+  display: flex;
+  align-items: center;
+  .btn{
+    background: rgba(0, 0, 0, 0.6);
+    @include font-size(17px);
+    height: 45px;
+    color: $white;
+    display: flex;
+    align-items: center;
+    i{
+      @include font-size(27px);
+      height: 25px;
+      margin-#{$left}: 10px;
+      &::before{
+        top: -3px;
+      }
+    }
+    &:hover{
+      background: transparent;
+    }
+  }
+}
+.dashboard{
   position: relative;
-  .header-settings{
-    background: $light-gray;
-    float: $right;
-    @include margin-right(-1px);
-    i{
-      display: flex;
-      div{
-        display: block;
-        padding: 0px;
-        background: none;
-        box-shadow: none;
-        @include margin-left(10px);
-        p{
-          opacity: 0.5;
-          font-family: Roboto;
-          @include font-size(13px);
-          font-weight: normal;
-          font-style: normal;
-          font-stretch: normal;
-          line-height: normal;
-          letter-spacing: normal;
-          text-align: $left;
-          @include margin-right(96px);
-          margin-bottom: 0px;
-        }
-        h1{
-          font-family: Roboto;
-          @include font-size(40px);
-          font-weight: 300;
-          font-style: normal;
-          font-stretch: normal;
-          line-height: normal;
-          letter-spacing: normal;
-          text-align: $left;
-          color: #37363b;
-          display: flex;
-          p{
-            line-height: 64px
-          }
-        }
-
-      }
-    }
-      div{
-        display: flex;
-        padding: 21px 100px 0 31px;
-        background: $white;
-        @include box-shadow;
-        border-radius: corner-values(0 0 0 20px);
-        img{
-          width: 60px;
-          height: 60px;
-        }
-      }
+  > .bg{
+    position: absolute;
+    @include box-shadow();
+    background: $white;
+    border-bottom-#{$left}-radius: $border-radius-base;
+    #{$left}: 0;
+    top: 0;
+    width: 200%;
+    height: 100%;
   }
-  header{
+  ul{
     display: flex;
-    .user-profile{
-      display: flex;
-      align-items: center;
-      img{
-        @include margin-right(12px);
-        border-radius: 50px;
+  }
+  li{
+    display: flex;
+    padding-left: 0;
+    padding-right: 0;
+    &:first-child{
+      a{
+        border-bottom-#{$left}-radius: $border-radius-base;
+      }
+    }
+    > a{
+      padding: 18px 30px;
+      width: 100%;
+      &:hover{
         background: $light-gray;
-        width: 60px;
-        padding: 10px;
-        height: 75%;
-        margin-top: 20px;
-      }
-      h1{
-        font-family: Roboto;
-        font-size: 30px;
-        font-weight: 300;
-        font-style: normal;
-        font-stretch: normal;
-        letter-spacing: normal;
-        text-align: $left;
-        color: #fefeff;
-        text-transform: capitalize;
-        margin-top: 5px;
-      }
-    }
-    .signout{
-      margin-top: 25px;
-      .btn-primary{
-        background: $black;
-        text-transform: none;
-        span{
-          @include margin-right(10px);
-        }
       }
     }
   }
-  h1{
-    font-family: Roboto;
-    font-size: 30px;
+  .request-tab{
+    max-width: 42px;
+  }
+  .order-tab{
+    width: 50px;
+  }
+  .wish-list-tab{
+    width: 46px;
+  }
+  .garage-tab{
+    width: 46px;
+  }
+  .media-body{
+    padding-#{$left}: 10px;
     font-weight: 300;
-    font-style: normal;
-    font-stretch: normal;
-    line-height: normal;
-    letter-spacing: normal;
-  }
-  #setting-details {
-    @include text-left;
-    padding-top: 70px;
-    .wahtsapp-before-links{
-      .bg-whatsapp{
-        text-transform: none;
-        color: black;
-        border-radius: corner-values(20px 20px 0px 20px) !important;
-        span{
-          width: fit-content !important;
-        }
-      }
-    }
-    .list-group{
-      .list-group-item{
-        border: none;
-        margin-top: 2px;
-      }
-    }
-    .list-group:first-child {
-      .list-group-item:first-child {
-        margin-top: 0px;
-      }
-      .list-group-item:last-child {
-        border-radius: inherit;
-      }
-    }
-    .list-group-item.active{
-      background: #fdeceb;
-      @include fill-border-right(2px, $brand-color);
-      color: $black;
-      border-top: none;
-      border-bottom: none;
-    }
-  }
-  .bg-whatsapp{
-    margin-top: 100px;
-    margin-#{$left}: 77%;
-    width: 151px;
-    height: 46px;
-    background: linear-gradient(to top, #f9f9f9, $white);
-    text-transform: none;
-    color: black;
-    border-radius: corner-values(20px 20px 0px 20px) !important;
-    span{
-      width: 90px;
-      text-align: $left;
-    }
-  }
-}
-
-.password-popup{
-  border-radius: 20px 0 20px 20px !important;
-  max-width: 696px !important;
-  .modal-title{
-    margin-#{$left}: 37px;
-    .sec-header{
+    @include font-size(40px);
+    line-height: 1;
+    label,
+    h5{
+      font-weight: 400;
+      @include font-size(13px);
+      @include opacity(0.7);
       margin-bottom: 0;
-      h1{
-      @include text-capitalize;
-      }
     }
-  }
-  .modal-content{
-    background: $white !important;
+    label{
+      margin-#{$left}: 5px;
+    }
   }
 }
-#setting-mobile{
-  @include text-left;
-  padding-bottom: 30px;
-  background: $light-gray;
-  .header-settings{
-    background: $light-gray;
-    float: $right;
-    @include margin-right(-1px);
-    i{
-      display: flex;
-      div{
-        display: block;
-        padding: 0px;
-        background: none;
-        box-shadow: none;
-        @include margin-left(10px);
-        p{
-          opacity: 0.5;
-          font-family: Roboto;
-          @include font-size(13px);
-          font-weight: normal;
-          font-style: normal;
-          font-stretch: normal;
-          line-height: normal;
-          letter-spacing: normal;
-          text-align: $left;
-          @include margin-right(96px);
-          margin-bottom: 0px;
-        }
-        h1{
-          font-family: Roboto;
-          @include font-size(40px);
-          font-weight: 300;
-          font-style: normal;
-          font-stretch: normal;
-          line-height: normal;
-          letter-spacing: normal;
-          text-align: $left;
-          color: #37363b;
-          display: flex;
-          p{
-            line-height: 64px
-          }
-        }
-
-      }
+.setting-tabs-link{
+  @extend .list-unstyled;
+  background: $white;
+  @include border-radius-div;
+  overflow: hidden;
+  a{
+    display: block;
+    padding: 25px 15px;
+    border-top: 2px solid $light-gray;
+    @include font-size(18px);
+    line-height: 1;
+    &:hover,
+    &.active{
+      background: #fdeceb;
     }
-      div{
-        display: flex;
-        padding: 21px 100px 0 31px;
-        background: $white;
-        @include box-shadow;
-        border-radius: corner-values(0 0 0 20px);
-        img{
-          width: 60px;
-          height: 60px;
-        }
-      }
-  }
-  header{
-    display: flex;
-    .user-profile{
-      display: flex;
-      img{
-        @include margin-right(5px);
-        border-radius: 50px;
-        background: $light-gray;
-        width: 50px;
-        padding: 5px;
-        height: 90%;
-      }
-      h1{
-        font-family: Roboto;
-        font-size: 30px;
-        font-weight: 300;
-        font-style: normal;
-        font-stretch: normal;
-        letter-spacing: normal;
-        text-align: $left;
-        color: #fefeff;
-        text-transform: capitalize !important;
-        margin-top: 5px;
-      }
-    }
-    .signout{
-      .btn-primary{
-        background: $black;
-        text-transform: none;
-        span{
-          @include margin-right(10px);
-        }
-      }
+    &.active{
+      border-#{$right}: 2px solid $brand-color;
+      cursor: default;
     }
   }
-  h1{
-    font-family: Roboto;
-    font-size: 30px;
-    font-weight: 300;
-    font-style: normal;
-    font-stretch: normal;
-    line-height: normal;
-    letter-spacing: normal;
+}
+.requests-main{
+  padding-top: 56px;
+  .nav-tabs{
+    border-bottom-width: 2px;
+    border-bottom-color:  rgba(55, 54, 60, 0.2)
   }
-  .list-group{
-    .list-group-item{
-      @include fill-border-left(none);
-      margin-top: 2px;
-      border-top: none;
-      border-radius: 0px;
+  .nav-item{
+    margin-right: 10px;
+    margin-left: 10px;
+    &:first-child{
+      margin-#{$left}: 0;
     }
   }
-  .list-group:first-child {
-    .list-group-item:first-child {
-      margin-top: 0px;;
-    }
-  }
-  .list-group-item.active{
-    background: #fdeceb;
-    @include fill-border-right(2px, $brand-color);
-    color: $black;
-    border-top: none;
-    border-bottom: none;
-  }
-  .bg-whatsapp{
-    margin-top: 100px;
-    margin-#{$left}: 77%;
-    width: 151px;
-    height: 46px;
-    background: linear-gradient(to top, #f9f9f9, $white);
-    text-transform: none;
-    color: black;
-    border-radius: corner-values(20px 20px 0px 20px) !important;
-    span{
-      width: 90px;
-      text-align: $left;
+  .nav-link{
+    cursor: pointer;
+    padding: 10px 5px;
+    border-width: 0;
+    border-bottom: 2px solid transparent;
+    @include font-size(17px);
+    text-transform: capitalize;
+    line-height: 1;
+    &:hover,
+    &.active{
+      border-bottom-color: $brand-color;
+      background: transparent;
     }
   }
 }
