--- a/scss/modules/_blocks.scss
+++ b/scss/modules/_blocks.scss
@@ -204,5 +204,296 @@
 .div-style{
   @include border-radius-div();
   overflow: hidden;
+}
+.hero{
+  @extend .position-relative;
+  img{
+    width: 100%;
+  }
+}
+.hero-content{
+  @extend .position-absolute;
+  left: 0;
+  width: 100%;
+  z-index: 2;
+  h1{
+    color: $white;
+    @include font-size(55px);
+    text-transform: uppercase;
+    font-weight: 500;
+    text-align: center;
+    line-height: 38px;
+    @include media-breakpoint-down(lg){
+      font-size: 2.5rem;
+    };
+  }
+}
+.order-steps{
+  margin-bottom: 50px;
+  @include media-breakpoint-down(md){
+    margin-bottom: 25px;
+  };
+  li{
+    text-align: center;
+    @include make-col-ready();
+  }
+    figure{
+      margin-bottom: 0;
+      > div:first-child{
+        height: 90px;
+        @include media-breakpoint-down(lg){
+          height: auto;
+        }
+        span{
+          display: none;
+          @include media-breakpoint-up(lg){
+            display: block;
+            position: absolute;
+            width: calc(50% + 15px);
+            top: 50%;
+            transform: translate(0, -50%);
+            border-top: 2px dashed $dark-gray;
+            text-align: $right;
+            z-index: -1;
+            height: 3px;
+          };
+          i{
+            color: $dark-gray;
+            @include font-size(24px);
 
+            &:before{
+              @include media-breakpoint-up(lg){
+                top: -14px;
+                background: $white;
+              }
+              padding: 0 5px;
+            }
+          }
+          &:first-child{
+            @include media-breakpoint-up(lg){
+              #{$left}: 0;
+            }
+          }
+          &:last-child{
+            @include media-breakpoint-up(lg){
+              #{$left}: calc(50% + 15px);
+            }
+          }
+        }
+      }
+    }
+    .figure{
+      padding: 0 10px;
+      background: $white;
+      img{
+            display: inline-block;
+          }
+    }
+    .request{
+      img{
+        width: 73px;
+          @include media-breakpoint-down(sm){
+            width: 60px;
+          }
+      }
+    }
+    .price{
+            padding: 0;
+            img{
+              width: 133px;
+              margin-top: 6px;
+                @include media-breakpoint-down(sm){
+                  width: 100px;
+                  margin-top: 0;
+                }
+            }
+          }
+    .cart{
+            img{
+              width: 77px;
+              margin-top: 4px;
+              @include media-breakpoint-down(sm){
+                width: 70px;
+                margin-top: 0;
+              }
+            }
+          }
+    .delivery{
+      height: 90px;
+      @include media-breakpoint-down(sm){
+        height: 70px;
+      }
+            img{
+              width: 106px;
+              @include media-breakpoint-down(sm){
+                width: 80px;
+
+              };
+            }
+          }
+    figcaption{
+      display: block;
+      padding-top: 20px;
+      @include media-breakpoint-down(lg){
+        padding-top: 10px;
+      };
+      h3{
+        text-transform: uppercase;
+        @include font-size(20px);
+        margin-bottom: 5px;
+      }
+      p{
+        margin-bottom: 0;
+        @include font-size(14px);
+        @include opacity(0.5);
+      }
+    }
+    .icon-arrow-down,
+    .done-xs{
+      color: $dark-gray;
+      @include font-size(25px);
+      margin: 15px 0;
+      height: 25px;
+      display: block;
+      @include media-breakpoint-up(lg){
+        display: none;
+      };
+    }
+}
+.input-sec{
+  background: $white;
+  @include border-radius-div();
+  padding: 20px 15px 1px;
+  .has-float-label,
+  .float-label{
+    margin-bottom: 20px;
+    &.error,
+    &.warning{
+      margin-bottom: 40px;
+    }
+  }
+  .has-float-label{
+    @include border-radius-div();
+    input{
+      @include border-radius-div();
+    }
+  }
+  .select__control{
+    @include border-radius-div();
+  }
+  .form-row{
+    .col{
+      &:last-child{
+        .has-float-label,
+        .select__control{
+          border-top-#{$left}-radius: 0;
+          border-bottom-#{$left}-radius: 0;
+          input{
+            border-top-#{$left}-radius: 0;
+            border-bottom-#{$left}-radius: 0;
+          }
+        }
+
+      }
+      &:first-child{
+        .has-float-label,
+        .select__control{
+          border-bottom-#{$right}-radius: 0;
+          input{
+            border-bottom-#{$right}-radius: 0;
+          }
+        }
+      }
+
+    }
+  }
+}
+.submit-row{
+  padding-top: 30px;
+  display: flex;
+  align-items: center;
+  p{
+    @include font-size(15px);
+    margin-bottom: 0;
+    a{
+      color: $brand-color;
+    }
+  }
+  .btn{
+    height: 50px;
+    @include box-shadow();
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    @include font-size(20px);
+    @include media-breakpoint-down(md){
+      width: 100%;
+      justify-content: flex-end;
+      margin: 20px 0 50px;
+    };
+    &.btn-primary{
+      min-width: 150px;
+    }
+    i{
+      @include font-size(23px);
+      height: 23px;
+    }
+  }
+}
+
+//email email-validation
+
+.email-validate{
+  .validate-text,
+  .icon-alert{
+    @include transition(all, 0.5s, ease);
+    @include opacity(0);
+    height: 0;
+  }
+  [class^='icon-']{
+    position: absolute;
+    #{$right}: 15px;
+    @include font-size(22px);
+    height: 22px;
+    top: 50%;
+    margin-top: -11px;
+  }
+  .validate-text{
+    padding-#{$right}: 15px;
+    height: auto;
+    text-align: #{$right};
+    padding-top: 10px;
+    padding-#{$left}: 10px;
+  }
+  &.warning,
+  &.true{
+    [class^='icon-']{
+      @include opacity(1);
+      display: block;
+    }
+  }
+  &.warning{
+    input{
+      box-shadow: 0px 1px 1px 0px #e8d59a;
+    }
+    [class^='icon-']{
+      color: #856404;
+    }
+    .validate-text{
+      color: #856404;
+      @include opacity(1);
+      display: block;
+    }
+  }
+  &.true{
+    input{
+      box-shadow: 0px 1px 1px 0px rgba(48, 213, 118, 0.7);
+    }
+    [class^='icon-']{
+      color: #30d576;
+    }
+    .validate-text{
+      color: #30d576;
+    }
+  }
 }
