--- a/scss/modules/_social-media.scss
+++ b/scss/modules/_social-media.scss
@@ -1,39 +1,48 @@
-#social-media {
-  > div:first-child {
-    position: relative;
-    margin-top: 35px;
-    height: 20px;
-    text-align: center;
+.social-signup{
+  text-align: center;
 
-    p {
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
-      background: $light-gray;
-      color: $lighter-grey;
-      line-height: 1.67;
-      padding-left: 12px;
-      padding-right: 12px;
-      @include font-size(15px);
-    }
-  }
-  > div:nth-child(2) {
-    display: flex;
-    justify-content: center;
-    flex-direction: row;
-    margin-top: 29px;
-  }
-  div {
-    margin-left: 7px;
-  }
-  .btn-social-media {
-    // @include box-shadow;
-  }
-  .solid-line {
+}
+.or{
+  @include font-size(15px);
+  color: $charcoal-grey-two-40;
+  text-align: center;
+  margin-bottom: 0;
+  span:last-child{
+    background: $white;
     display: inline-block;
-    width: 412px;
-    height: 1px;
-    background-color: $very-light-grey;
+    padding: 0 10px;
+    position: relative;
+    top: -10px;
+  }
+  .line{
+    width: 80%;
+    height: 0;
+    border-top: 1px solid darken($light-gray, 10%);
+    display: block;
+    margin: 0 auto;
+    @include opacity(0.6);
+  }
+}
+.btn-social{
+  display: inline-flex;
+  @include border-radius-div;
+  overflow: hidden;
+  button{
+    height: 55px;
+    width: 55px;
+    background: $light-gray;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    i{
+      @include font-size(25px);
+      height: 25px;
+    }
+    & + button{
+      margin-#{$left}: 8px;
+    }
+    &:hover{
+      background: $white
+    }
   }
 }
