finished the terms and condition

--- a/scss/main-ar/main-ar.scss
+++ b/scss/main-ar/main-ar.scss
@@ -108,6 +108,7 @@ $dir: rtl;
 @import "../layouts/setting/addresses";
 @import "../layouts/setting/side-bar";
 @import "../layouts/result-not-found";
+@import "../layouts/terms-and-conditions";
 
 @import "../state/checkout/checkout-shipping";
 @import "../state/checkout/checkout-payment";
