--- a/scss/layouts/_quotation-request.scss
+++ b/scss/layouts/_quotation-request.scss
@@ -175,8 +175,9 @@
     }
   }
   .open-garage{
-    position: relative;
-    a{
+    position: static;
+    .btn.btn-gray{
+      position: relative;
       @include font-size(19px);
       border-bottom-#{$right}-radius: 0 !important;
       margin-bottom: 5px;
@@ -188,7 +189,7 @@
         height: 30px;
       }
     }
-    p{
+    > p{
       position: absolute;
       top: -5px;
       #{$right}: 15px;
@@ -202,6 +203,61 @@
       min-width: 22px;
       text-align: center
     }
+    .select-input{
+      position: absolute;
+      z-index: 3;
+      max-width: 124px;
+      &:hover + a{
+        background: $dark-gray;
+      }
+    }
+
+    .select__indicators{
+      display: none;
+    }
+    .select__value-container,
+    .select__control{
+      background: transparent !important;
+    }
+    .select__single-value{
+      display: none !important;
+    }
+    .select__menu{
+      #{$left}: auto !important;
+      #{$right}: 0 !important;
+      margin-top: -10px !important;
+    }
+    .placeholder{
+      display: flex;
+      align-items: center;
+      color: $basic-gray;
+      @include opacity(1);
+
+      i{
+        @include font-size(33px);
+        @include opacity(0.7);
+        margin-#{$right}: 5px;
+      }
+      h6{
+        font-weight: 400;
+        @include font-size(16px);
+        margin-bottom: 0;
+        p{
+          @include font-size(13px);
+          @include opacity(0.8);
+          white-space: nowrap;
+          margin-top: 2px;
+        }
+      }
+    }
+    .select__menu-list{
+      .select__option{
+        padding-top: 20px;
+        padding-bottom: 20px;
+        @include font-size(16px);
+      }
+    }
+
   }
   .sec-shadow{
     @include box-shadow;
@@ -378,15 +434,17 @@
   }
 }
 .vehicle-not-empty{
+  position: relative;
   h3{
     margin-bottom: 0 !important;
     display: flex;
     align-items: center;
   }
+}
+.vehicle-info{
   .float-label{
     min-width: 160px;
   }
-
 }
 .part-array{
   .quantity{
