fixed the style Data

--- a/scss/state/checkout/_checkout-payment.scss
+++ b/scss/state/checkout/_checkout-payment.scss
@@ -280,6 +280,7 @@
           }
           .select__control{
             padding: 5px;
+            height: 45px;
           }
           .years{
             margin-top: 31px;
@@ -292,7 +293,6 @@
           }
           .months{
             .select-input{
-              margin-top: 31px;
               .css-10nd86i {
                 border-radius: corner-values(20px 0 0 20px) !important;
               }
