--- a/scss/state/checkout/_checkout-order.scss
+++ b/scss/state/checkout/_checkout-order.scss
@@ -203,6 +203,13 @@
         }
       }
     }
+    .cart-quantity{
+      display: flex !important;
+      .quantity{
+        @include margin-left(3px);
+        margin: 0px;
+      }
+    }
   }
   .footer-delivery{
     display: flex;
