update the quotation arrows and the style for the garage

--- a/src/scss/base/_normalize.scss
+++ b/src/scss/base/_normalize.scss
@@ -4,7 +4,10 @@
 body{
   overflow-x: hidden;
   height: auto;
-}
+  @include if-rtl{
+    text-align: right;
+  };
+ }
 body,html{
 color: $basic-gray;
 }
