--- a/src/scss/layouts/_quotation-request.scss
+++ b/src/scss/layouts/_quotation-request.scss
@@ -175,7 +175,7 @@
     }
   }
   .open-garage{
-    position: static;
+    position: relative;
     .btn.btn-gray{
       position: relative;
       @include font-size(19px);
@@ -184,9 +184,25 @@
       display: flex;
       align-items: center;
       padding: 6px 20px;
+      @include media-breakpoint-down(md){
+        padding-right: 10px;
+        padding-left: 10px;
+        span{
+          display: none;
+        }
+      };
       i{
         @include font-size(30px);
         height: 30px;
+        @include if-rtl{
+          -moz-transform: scaleX(-1);
+         -o-transform: scaleX(-1);
+         -webkit-transform: scaleX(-1);
+         transform: scaleX(-1);
+         filter: FlipH;
+         -ms-filter: "FlipH";
+         left: 5px;
+        };
       }
     }
     > p{
@@ -206,7 +222,11 @@
     .select-input{
       position: absolute;
       z-index: 3;
-      max-width: 124px;
+      width: calc(100% - 15px);
+      height: 100%;
+      @include media-breakpoint-down(md){
+        width: calc(100% - 30px);
+      };
       &:hover + a{
         background: $dark-gray;
       }
@@ -224,19 +244,23 @@
     }
     .select__menu{
       #{$left}: auto !important;
-      #{$right}: 0 !important;
+      #{$right}:0 !important;
       margin-top: -10px !important;
+      @include media-breakpoint-down(md){
+        #{$right}: if-rtl(-30px, 0) !important;
+ 
+      }
     }
     .placeholder{
       display: flex;
       align-items: center;
       color: $basic-gray;
       @include opacity(1);
-
       i{
         @include font-size(33px);
         @include opacity(0.7);
         margin-#{$right}: 5px;
+        height: 35px;
       }
       h6{
         font-weight: 400;
@@ -247,6 +271,9 @@
           @include opacity(0.8);
           white-space: nowrap;
           margin-top: 2px;
+          @include media-breakpoint-down(md){
+            display: none;
+          };
         }
       }
     }
@@ -257,7 +284,6 @@
         @include font-size(16px);
       }
     }
-
   }
   .sec-shadow{
     @include box-shadow;
@@ -277,7 +303,8 @@
       padding-bottom: 0;
     }
   }
-  .form-control{
+  .form-control,
+  .part-actions{
     height: 55px;
   }
   form{
@@ -434,7 +461,6 @@
   }
 }
 .vehicle-not-empty{
-  position: relative;
   h3{
     margin-bottom: 0 !important;
     display: flex;
