resolved the issue with mobile sidebar

--- a/src/scss/layouts/_search_result.scss
+++ b/src/scss/layouts/_search_result.scss
@@ -15,6 +15,9 @@
 }
 .results-container {
   @extend .p-inner-sec;
+  @include media-breakpoint-down(md) {
+    padding-top: 100px;
+  };
   position: relative;
 }
 .filter{
